# Shimarin

./: README.rst  setup.cfg
.github/workflows/: forgejo-pr-sync.yml
examples/client/: main.py
examples/server/: main.py
