[metadata]
name=Shimarin
version=0.0.2
description=asynchronous event-based communication between client and server
long_description_content_type=markdown
author=Kamuri Amorim
author_email=myk.gata14@gmail.com
url=
keywords=python events client server asynchronous
license=MIT
[options]
zip_safe = False
packages =
    Shimarin
